--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "async-prompt": "^1.0.1",
     "axios": "^0.18.0",
-    "download": "^7.1.0",
     "fs-extra": "^7.0.0",
     "path": "^0.12.7",
     "progress": "^2.0.0",
     "sanitize-filename": "^1.6.1"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^5.0.4",
+    "@types/progress": "^2.0.1"
   }
 }
